src/test/deca/syntax/valid/custom/or.deca
{
    bool x = true;
    bool y = false;

    if (x || y) {
        println(x);
    }
}