src/test/deca/syntax/invalid/custom/else_noobrace.deca
{
if (true){
    println("string");
} else
i = 1;
}

}